<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shift_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Encrypted_Result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/result_will_show_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_to_encrypt" />

    <EditText
        android:id="@+id/message_to_encrypt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textShortMessage|text"
        android:text="@string/encrypted_word_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modulo_shift_text" />

    <TextView
        android:id="@+id/modulo_shift_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/current_shift_modulized"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Encrypt_label" />

    <Button
        android:id="@+id/encrypt_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:text="@string/encrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Encrypted_Result" />

    <TextView
        android:id="@+id/Encrypt_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:text="@string/enter_text_to_be_encrypted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>